--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and force unix-style line endings
 * text eol=lf
+
+# Binary artifacts NOT to be converted to LF for line endings
+*.png binary
+*.tar.xz binary
+*.zip binary
