--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,50 @@
-# Binary artifacts NOT to be converted to LF for line endings
+# Define the default behavior where GitHub attempts to detect the file type
+* text=auto
+
+# Define line endings to be unix (LF) for source code
+*.php text eol=lf
+*.css text eol=lf
+*.sass text eol=lf
+*.scss text eol=lf
+*.less text eol=lf
+*.styl text eol=lf
+*.js text eol=lf
+*.coffee text eol=lf
+*.json text eol=lf
+*.htm text eol=lf
+*.html text eol=lf
+*.xml text eol=lf
+*.svg text eol=lf
+*.txt text eol=lf
+*.ini text eol=lf
+*.inc text eol=lf
+*.pl text eol=lf
+*.rb text eol=lf
+*.py text eol=lf
+*.scm text eol=lf
+*.sql text eol=lf
+*.sh text eol=lf
+*.bat text eol=lf
+
+# Define line endings to be unix (LF) for GitHub config files
+.gitattributes text eol=lf
+.gitignore text eol=lf
+.gitconfig text eol=lf
+
+# Define binary files to be excluded from modification
 *.png binary
-*.tar.xz binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.flv binary
+*.fla binary
+*.swf binary
+*.gz binary
 *.zip binary
-
-# Auto detect text files and force unix-style line endings
-* text eol=lf
-
+*.7z binary
+*.ttf binary
+*.eot binary
+*.woff binary
+*.pyc binary
+*.pdf binary
